--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,32 @@
   color-scheme: dark;
 }
 
+.padding-x {
+  @apply px-6 sm:px-16;
+}
+.padding-y {
+  @apply py-6 sm:py-16;
+}
+.padding {
+  @apply px-6 py-10 sm:py-16 sm:px-16;
+}
+
+.heroHeadText {
+  @apply font-black text-white lg:text-[80px] sm:text-[60px] xs:text-[50px] text-[40px] lg:leading-[98px] mt-2;
+}
+.heroSubText {
+  @apply text-[#dfd9ff] font-medium lg:text-[30px] sm:text-[26px] xs:text-[20px] text-[16px] lg:leading-[40px];
+}
+
+.sectionHeadText {
+  @apply text-white font-black md:text-[60px] sm:text-[50px] xs:text-[40px] text-[30px];
+}
+.sectionSubText {
+  @apply sm:text-[18px] text-[14px] text-secondary uppercase tracking-widers;
+}
+
+/* ------------ */
+
 .hash-span {
   margin-top: -100px;
   padding-bottom: 100px;
