--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
   @apply text-white font-black md:text-[60px] sm:text-[50px] xs:text-[40px] text-[30px];
 }
 .sectionSubText {
-  @apply sm:text-[18px] text-[14px] text-secondary uppercase tracking-widers;
+  @apply sm:text-[18px] text-[14px] text-secondary uppercase tracking-widest;
 }
 
 /* ------------ */
